fixes #5 - prevent linebreak in the middle of inline code

--- a/views/master.sass
+++ b/views/master.sass
@@ -193,8 +193,9 @@ article
     line-height: 1.3
     border-radius: 3px
   code
-    padding: 2px 5px
+    padding: 1px 5px
     border: $border-style
+    display: inline-block
   pre
     border: $border-style
     code
